--- a/index.html
+++ b/index.html
@@ -22,18 +22,7 @@
           <div class="col-xl-8 col-md-12 offset-xl-2">
             <div class="card user-card-full">
               <div class="row m-l-0 m-r-0">
-                <div class="col-sm-4 bg-c-lite-green user-profile">
-                  <div class="card-block text-center text-white">
-                    <div class="m-b-25">
-                      <img
-                        src="./user.png"
-                        class="img-radius"
-                        alt="User-Profile-Image"
-                      />
-                    </div>
-                    <h4 class="f-w-600">Hieu Pham</h4>
-                    <p>Web Developer</p>
-                  </div>
+                <div class="col-sm-4 bg-c-lite-green user-profile" style="background: url('https://scontent.fhph1-1.fna.fbcdn.net/v/t1.6435-9/240425786_563020391688044_2322379076787968544_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=e3f864&_nc_ohc=Fgm2n2aOVakAX9MkhxY&tn=T5yVBGt75r45M0pN&_nc_ht=scontent.fhph1-1.fna&oh=7d1448ef641621e053a778a2fe1fb1ab&oe=6157A601');background-position: center center;background-size:cover;height:338px">
                 </div>
                 <div class="col-sm-8">
                   <div class="card-block">
