--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/app.css" />
+    <link rel="stylesheet" href="./css/app.css?version=0.0.1" />
   </head>
   <body>
     <div class="wrapper">
@@ -66,10 +66,14 @@
             </div>
             <div class="info--social">
               <div class="info--social__item">
-                <a href="#!Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="//fb.com/hieucoderx"
+                  ><i class="fab fa-facebook"></i
+                ></a>
               </div>
               <div class="info--social__item">
-                <a href="#!Github"><i class="fab fa-github"></i></a>
+                <a href="//youtube.com/hieucoderx"
+                  ><i class="fab fa-youtube"></i
+                ></a>
               </div>
             </div>
           </div>
