--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             </div>
             <div class="info--social">
               <div class="info--social__item">
-                <a href="//fb.com/hieucoderx"
+                <a href="//fb.com/hieucoderx" target="_blank"
                   ><i class="fab fa-facebook"></i
                 ></a>
               </div>
               <div class="info--social__item">
-                <a href="//youtube.com/hieucoderx"
+                <a href="//youtube.com/hieucoderx" target="_blank"
                   ><i class="fab fa-youtube"></i
                 ></a>
               </div>
