--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A 17 year old boy from Phu Yen,
+    Vietnam. Have a passion to become a good programmer, pursuing to
+    become a Full-stack developer"
+    />
+    <meta property="og:title" content="Welcome to Hieu Pham" />
+    <meta
+      property="og:description"
+      content="A 17 year old boy from Phu Yen,
+    Vietnam. Have a passion to become a good programmer, pursuing to
+    become a Full-stack developer"
+    />
+    <meta property="og:image" content="./img/wp6241758.jpg" />
     <title>Welcome to Hieu Pham</title>
     <link
       rel="stylesheet"
