--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/app.css?version=0.0.2" />
+    <link rel="stylesheet" href="./css/app.css?version=0.0.4" />
   </head>
   <body>
     <div class="wrapper">
@@ -37,7 +37,10 @@
         <div class="col col-3">
           <div class="info">
             <div class="info--image">
-              <img src="./img/b85189e366c1ae9ff7d0.jpg" alt="Hieu Pham" />
+              <img
+                src="./img/107369080_150105686679336_6713344435605106089_n.jpg"
+                alt="Hieu Pham"
+              />
               <span>Hieu Pham</span>
             </div>
             <div class="info--name">Pham Van Hieu</div>
