--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/app.css?version=1.0.0" />
+    <link rel="stylesheet" href="./css/app.css?version=1.0.1" />
   </head>
   <body>
     <div class="wrapper">
@@ -40,7 +40,7 @@
               />
               <span>Hieu Pham</span>
             </div>
-            <div class="info--name">Pham Van Hieu</div>
+            <div class="info--name">Hieu Pham</div>
             <div class="info--slogan">
               A <span class="years-old">17</span> year old boy from Phu Yen,
               Vietnam. Have a passion to become a good programmer, pursuing to
