--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="card-info__item card-info__location">
             <span class="card-info__icon"><i class="fas fa-location-arrow"></i></span>
-            <div class="card-info__text"><a href="https://www.google.com/maps/place/THI%E1%BA%BET+K%E1%BA%BE+WEB+TUY+HO%C3%80+PH%C3%9A+Y%C3%8AN/@13.1129026,109.2952131,17z/data=!3m1!4b1!4m5!3m4!1s0x316fedd9ba9e5715:0xb853bb60a5851cea!8m2!3d13.1128974!4d109.2974018" target="_blank">6th Floor, Apec Mandala Wyndham, Hung Vuong Road, Ward 5, Tuy Hoa City, Phu Yen Province 56000</a></div>
+            <div class="card-info__text"><a href="https://goo.gl/maps/duErJTzkYEParqG37" target="_blank">6th Floor, Apec Mandala Wyndham, Hung Vuong Road, Ward 5, Tuy Hoa City, Phu Yen Province 56000</a></div>
           </div>
           <div class="card-info__item card-info__banking">
             <span class="card-info__icon"><i class="fas fa-university"></i></span>
