--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- META TAG -->
+  <meta name="description" content="Giải pháp cho doanh nghiệp tầm nhỏ đến tầm trung, thiết kế website, audit, ux/ui, seo technical">
+  <meta name="keywords" content="thiết kế website, audit, shopify, wordpress, seo, thiết kế web tuy hoà, thiết kế web phú yên">
+
   <title>harrydarkcode</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0-2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/app.css">
+
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Website",
+      "name": "harrydarkcode - thiết kế website chuyên nghiệp",
+      "legalName": "",
+      "url": "https://harrydarkcode.info",
+      "logo": "",
+      "foundingDate": "2017",
+      "founders": [
+        {
+          "@type": "Person",
+          "name": "Harry Pham"
+        }
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "ĐL Hùng Vương, Phường 5, TP Tuy Hoà, Tỉnh Phú Yên",
+        "addressLocality": "",
+        "addressRegion": "PY",
+        "addressCountry": "VN"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer support",
+        "telephone": "+84966640943",
+        "email": "harrydarkcode@gmail.com"
+      },
+      "sameAs": [
+        {
+          "http://harrydarkcode.info"
+        }
+      ]
+    }
+  </script>
 </head>
 <body>
   <div id="root">
@@ -39,7 +80,7 @@
             <span class="card-info__icon"><i class="fas fa-university"></i></span>
             <div class="card-info__text">
               <div>
-                <a href="https://www.vpbank.com.vn/"><small>Vietnam Prosperity Joint Stock Commercial Bank</small></a>
+                <a href="https://www.vpbank.com.vn/" target="_blank"><small>Vietnam Prosperity Joint Stock Commercial Bank</small></a>
                 <ul style="list-style: inside;">
                   <li><small>Symbol:</small> <strong>VPBANK</strong></li>
                   <li><small>Account Number:</small> <strong>261262266</strong></li>
@@ -49,7 +90,7 @@
               </div>
               <div class="card-info__spacing"></div>
               <div>
-                <a href="https://www.mbbank.com.vn/"><small>Military Commercial Joint Stock Bank</small></a>
+                <a href="https://www.mbbank.com.vn/" target="_blank"><small>Military Commercial Joint Stock Bank</small></a>
                 <ul style="list-style: inside;">
                   <li>Symbol: <strong>MBBANK</strong></li>
                   <li><small>Account Number:</small> <strong>09999123456666</strong></li>
