--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       "@type": "Website",
       "name": "harrydarkcode - thiết kế website chuyên nghiệp",
       "legalName": "",
-      "url": "https://harrydarkcode.info",
+      "url": "https://harrydarkcode.tech",
       "logo": "",
       "foundingDate": "2017",
       "founders": [
@@ -42,7 +42,7 @@
         "email": "harrydarkcode@gmail.com"
       },
       "sameAs": [
-        "http://harrydarkcode.info"
+        "https://harrydarkcode.tech"
       ]
     }
   </script>
@@ -52,7 +52,7 @@
     <div class="card">
       <div class="card-header"></div>
       <div class="card-avatar">
-        <img src="./assets/images/user1.jpeg" alt="harrydarkcode">
+        <img src="https://cdn5.telegram-cdn.org/file/hJ85LiGwMkk7Zzro9sLm4XDj4VLA6hWDw1IsrPXXgHZFXHpzNqTdy2dmpt1ZK2Zo55u_YPve0F0wkkekfcuvMkDuamgugDvBN53q4vIYB6MWhV_nZAgezN9_1rrGNw1ozH5FzdpQfoBjURJBgiOBnQK4yUbFOn-M-lMdoXRdihrb8tFGg9p3QWJ6uFUcpC1ofXY7avXSciFgmTwyje4hCxyTo7NDpPy0mDFIaGdZKKC4sb1E-7OdSmAgxnSGSEAgzwCJPG1Es6Z2_QdlkjSWr4B3GBF8E9HqLSZ05JWPi9xTRePnHx7ZTjWFOfbwww_3Uc-TGmr_Ag5gpDLcQvSGxw.jpg" alt="harrydarkcode">
       </div>
       <div class="card-body">
         <h1 class="card-name">harrydarkcode</h1>
@@ -60,7 +60,7 @@
         <div class="card-info">
           <div class="card-info__item card-info__website">
             <span class="card-info__icon"><i class="fab fa-internet-explorer"></i></span>
-            <div class="card-info__text"><a href="https://harrydarkcode.info">www.harrydarkcode.info</a></div>
+            <div class="card-info__text"><a href="https://harrydarkcode.tech">www.harrydarkcode.tech</a></div>
           </div>
           <div class="card-info__item card-info__email">
             <span class="card-info__icon"><i class="far fa-envelope"></i></span>
