--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="card">
       <div class="card-header"></div>
       <div class="card-avatar">
-        <img src="https://cdn5.telegram-cdn.org/file/hJ85LiGwMkk7Zzro9sLm4XDj4VLA6hWDw1IsrPXXgHZFXHpzNqTdy2dmpt1ZK2Zo55u_YPve0F0wkkekfcuvMkDuamgugDvBN53q4vIYB6MWhV_nZAgezN9_1rrGNw1ozH5FzdpQfoBjURJBgiOBnQK4yUbFOn-M-lMdoXRdihrb8tFGg9p3QWJ6uFUcpC1ofXY7avXSciFgmTwyje4hCxyTo7NDpPy0mDFIaGdZKKC4sb1E-7OdSmAgxnSGSEAgzwCJPG1Es6Z2_QdlkjSWr4B3GBF8E9HqLSZ05JWPi9xTRePnHx7ZTjWFOfbwww_3Uc-TGmr_Ag5gpDLcQvSGxw.jpg" alt="harrydarkcode">
+        <img src="https://i.imgur.com/Avdftx6.jpg" alt="harrydarkcode">
       </div>
       <div class="card-body">
         <h1 class="card-name">harrydarkcode</h1>
@@ -99,7 +99,7 @@
               <div>
                 <a href="https://www.mbbank.com.vn/" target="_blank"><small>Military Commercial Joint Stock Bank</small></a>
                 <ul style="list-style: inside;">
-                  <li>Symbol: <strong>MBBANK</strong></li>
+                  <li><small>Symbol:</small> <strong>MBBANK</strong></li>
                   <li><small>Account Number:</small> <strong>09999123456666</strong></li>
                   <li><small>Beneficiary:</small> <strong>Pham Van Hieu</strong></li>
                   <li><small>Branch:</small> <strong>MB Phu Yen</strong></li>
